--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="200dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/icon"
+        android:src="@mipmap/ic_launcher"
         tools:ignore="ContentDescription" />
 
     <TextView
